# Mate

./: .gitignore  ARCHITECTURE_DIAGRAM.txt  BUGFIX_THREE_LAYERS.md  CORRECTED_LOGIC_TEST.md  CORRECT_3_LAYER_METHOD.md  DOWNLOAD_TINY_MODEL.md  FASTER_WHISPER_IMPLEMENTATION.md  FIXES_APPLIED.md  IMPLEMENTATION_COMPLETE.md  LAYER_MERGE_SUMMARY.md  LAYER_TRACKING_DESIGN.md  LOGIC_TEST.md  MERGE_AND_REPLACE_LOGIC.md  QUICK_START.md  QUICK_START_REALTIMESTT.md  QUICK_START_THREE_LAYER.md  README.md  REALTIMESTT_ANALYSIS.md  REALTIMESTT_FIX.md  REALTIMESTT_IMPLEMENTATION.md  THREE_LAYER_STT_IMPLEMENTATION.md  WHISPER_MIGRATION.md  _rewrite_ui_shell_block.py  build_exe.bat  pyproject.toml  rewrite_top.py  test_wasapi_direct.py  verify_whisper_setup.py
docs/: ARCHITECTURE.md  TESTING.md
src/mate/: cli.py  config.py  logging.py  main.py
src/mate/audio/: caption_engine.py  caption_manager.py  capture.py  realtime_stt_processor.py  vad_OLD.py  wasapi_loopback.py  whisper_processor.py
src/mate/core/: app.py  events.py  state.py
src/mate/services/: hotkeys.py  snippet_engine.py  win32_hotkeys.py
src/mate/ui/: shell.py  widgets.py
src/mate/utils/: hotkey_parser.py  process.py  win32.py
tests/: test_config.py  test_events.py  test_vad.py
